--- a/patient_website/public/availabilitydatepatient.html
+++ b/patient_website/public/availabilitydatepatient.html
@@ -41,15 +41,17 @@
     <main class="main" id="top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
             <div class="container">
-                <a class="navbar-brand" href="homepagepatient.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
+                <a class="navbar-brand" href="homepagepatient.php"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
                 <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="C:\Users\manka\Desktop\SEM 5\software development\github clone\clone 1\SD_SEC02_G01_02\meinhardt-front-end\public\signupguest.html">My Profile</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="../../meinhardt-front-end/public/appointmentbookpatient.html">Book Appointment</a></li>
+              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="./viewprofilepatient.php">My Profile</a></li>
+			  <li class="nav-item px-2"><a class="nav-link" href="../../admin_doctor/public/doctor/doctorList.php">Doctors</a></li>
+			  <li class="nav-item px-2"><a class="nav-link" href="./viewappointmenthistory.html">History</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="./appointmentbookpatient.html">Book Appointment</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="../../meinhardt-front-end/public/logoutpatients.html">Sign Out</a>
+            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="./SignOut.php">Sign Out</a>
                 </div>
             </div>
         </nav>
