--- a/patient_website/public/index.html
+++ b/patient_website/public/index.html
@@ -43,12 +43,11 @@
         <div class="container"><a class="navbar-brand" href="index.html"><img src="assets/img/gallery/logo.png" width="118" alt="logo" /></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
-              <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="#findUs">About Us</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="../viewlistdoctorguest.php">Doctors</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Help </a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#findUs">Contact</a></li>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="./login_signup/signPage.html">Sign In</a>
+              <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
+                  <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="..\..\aboutusguest.html">About Us</a></li>
+                  <li class="nav-item px-2"><a class="nav-link" href="../viewlistdoctorguest.php">Doctors</a></li>
+                  <li class="nav-item px-2"><a class="nav-link" href="..\..\contactusguest">Contact</a></li>
+              </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="./login_signup/signPage.html">Sign In</a>
           </div>
         </div>
       </nav>
